Update and rename afnii.html to  index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>s.id/wajibkirim</title>
+  <title>buattt kesayaangannn akuuu afniii</title>
+  <link rel="icon" type="image/gif" href="https://cdn.yupra.my.id/yp/qy4g1l8l.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <meta name="description" content="Script HTML Gosok Kartu 💌">
   <meta property="og:title" content="HTML Spesial Untukmu ✨">
